# occ-shape-inspector

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/cli/: main.cpp
app/gui/: README.md
cmake/: osi_config.h.in
docs/: design.md  roadmap.md
include/osi/analyzer/: ShapeAnalyzer.h  ShapeAnalyzerOptions.h  ShapeIssueDetector.h  ShapeStatisticsCollector.h
include/osi/core/: IssueLocation.h  ShapeDocument.h  ShapeIssue.h  ShapeStatistics.h
include/osi/io/: README.md  ShapeLoader.h
include/osi/report/: ShapeReport.h
src/analyzer/: ShapeAnalyzer.cpp  ShapeIssueDetector.cpp  ShapeStatisticsCollector.cpp
src/core/: IssueLocation.cpp  ShapeDocument.cpp  ShapeIssue.cpp  ShapeStatistics.cpp
src/io/: ShapeLoader.cpp
src/report/: ShapeReport.cpp
tests/: core_smoke_test.cpp  io_loader_test.cpp
tests/models/: README.md
